@@ -2,13 +2,15 @@
 ACLOCAL_AMFLAGS = -I m4
 
 SUBDIRS = \
-	include 	\
+	include		\
 	src/portLib	\
 	src/comLib	\
 	src/posterLib	\
 	src/h2		\
 	src/h2logd	\
-	src/shell
+	src/shell	\
+			\
+	src/regress
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = pocolibs.pc
