@@ -1,3 +1,4 @@
+121. Reconnect regression test to the build after automake switch.
 120. Fix built-in posterServ path by using the right automake bindir variable
 
 Version 2.11, 27 october 2011
